Copilot said: Add numbered theme selection and theme loading Add numbered theme selection and theme loading infrastructure
Add interactive numbered theme chooser (lists ./themes files, select by
number or name)
Persist selected theme to config.txt only if changed
Introduce Theme and ThemeLoader classes (dependency‑free minimal JSON
parser)
Load and report active theme after config update so Highlighter can use
it
Provide graceful fallbacks (keep current theme on invalid input /
missing file)
Add style fallback logic (use foreground color when a token style
missing)
Future:

Integrate Highlighter to consume Theme.styleFor(token)
Replace naive JSON parsing with a real library if robustness needed